# pybind11-multiple-modules

./: README.md
bindings/: CMakeLists.txt
bindings/python/: CMakeLists.txt  line_bindings.cpp  point_bindings.cpp
src/: CMakeLists.txt  line.cpp  point.cpp
src/include/: line.h  point.h
